codama-macros/tests/node_attribute/number_type_node_invalid_format.fail.rs
use codama_macros::node;

#[node(number_type(format = invalid))]
pub struct Foo(usize);

fn main() {}
